--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,17 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fossgalaxy.games</groupId>
-	<artifactId>hanabi</artifactId>
+	<artifactId>fireworks</artifactId>
 	<version>0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>hanabi</name>
+	<name>fireworks</name>
 	<url>https://git.fossgalaxy.com/iggi/hanabi</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.7</maven.compiler.source>
+    	<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
 	<distributionManagement>
@@ -27,15 +29,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
