make sure piers appears as a dev for Hanabi

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
     </site>
   </distributionManagement>
 
+	<developers>
+		<developer>
+			<id>pwillic</id>
+			<name>Piers Williams</name>
+			<email>pwillic@essex.ac.uk</email>
+		</developer>
+		<developer>
+			<id>webpigeon</id>
+			<name>Joseph Walton-Rivers</name>
+			<email>webpigeon@fossgalaxy.com</email>
+		</developer>
+	</developers>
+
 	<build>
 		<plugins>
 			<plugin>
