--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,10 @@
 			<version>1.0.4</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.21</version>
+		</dependency>
 	</dependencies>
 </project>
