--- a/pom.xml
+++ b/pom.xml
@@ -106,5 +106,11 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.7.21</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.3.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
