--- a/pom.xml
+++ b/pom.xml
@@ -133,5 +133,10 @@
             <artifactId>raven-logback</artifactId>
             <version>8.0.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.7</version>
+        </dependency>
     </dependencies>
 </project>
